<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="com.example.ebazarek_v2.activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/account_pic_circle"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/edtLoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:drawableEnd="@drawable/email_draw"
        android:ems="10"
        android:hint="E-mail adress"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:drawableEnd="@drawable/password_draw"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnContinueWithoutAccount"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/continue_without_account"
        android:textSize="11sp" />

</LinearLayout>